# WinToast

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  request.md  wintoastlib.cpp  wintoastlib.h
.github/: FUNDING.yml
.github/workflows/: build.yml
docs/: index.md
example/console-example/: README.MD  WinToast Console Example.sln  WinToast Console Example.vcxproj  WinToast Console Example.vcxproj.filters  main.cpp  manifest.xml
example/qt-gui-example/WinToastExample/: WinToastExample.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  wintoastlib.cpp  wintoastlib.h
examples/: CMakeLists.txt
examples/Simple-Explained-console-example/: Project1.vcxproj  Project1.vcxproj.filters
examples/Simple-Explained-console-example/src/: main.cpp
examples/console-example/: CMakeLists.txt  WinToast Console Example.sln  WinToast Console Example.vcxproj  WinToast Console Example.vcxproj.filters  main.cpp
examples/qt-gui-example/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: IWinToastHandler.h  Platform.h  WinToastTemplate.h  wintoastlib.cpp  wintoastlib.h
src/: WinToastLib.sln  readme.md  wintoastlib.cpp  wintoastlib.h
src/WinToastLib/: ReadMe.txt  WinToastDllImporter.cpp  WinToastDllImporter.h  WinToastHandler.cpp  WinToastHandler.h  WinToastHandlerExample.cpp  WinToastHandlerExample.h  WinToastLib.cpp  WinToastLib.h  WinToastLib.vcxproj  WinToastLib.vcxproj.filters  WinToastStringWrapper.cpp  WinToastStringWrapper.h  WinToastTemplate.cpp  WinToastTemplate.h  WinToastUtil.h  dllHelper.h  helper.h  includes.h  stdafx.cpp  stdafx.h  targetver.h  util.h
